--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -3033,7 +3033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **2.1.11 Precense of Top-Level Domain Name** MODIFY\n",
+    "#### **2.1.11 Precense of Top-Level Domain Name**\n",
     "\n",
     "One of the domains at the top of the Internet's hierarchical domain\n",
     "name system is a top-level domain (TLD). For instance, the top-level domain is com in the domain\n",
